@@ -55,7 +55,7 @@ ifeq ($(CROSSCOMPILING), 1)
 # convert as2gbmap.py to a batch file in bin directory
 	echo '@setlocal enabledelayedexpansion && python -x "%~f0" %* & exit /b !ERRORLEVEL!' | \
 	  cat - $(BUILDDIR)$(PREFIX)/bin/as2gbmap | \
-	  unix2dos > $(BUILDDIR)$(PREFIX)/bin/as2gbmap.cmd && \
+	  $(UNIX2DOS) > $(BUILDDIR)$(PREFIX)/bin/as2gbmap.cmd && \
 	  rm $(BUILDDIR)$(PREFIX)/bin/as2gbmap
 endif
 
@@ -80,8 +80,8 @@ endif
 generate-setup:
 ifeq ($(CROSSCOMPILING), 1)
 	mkdir -p $(dir $(SETUPNAME))
-	cp $(ORIGDIR)/sdcc/COPYING $(BUILDDIR)$(PREFIX)/COPYING.txt; unix2dos $(BUILDDIR)$(PREFIX)/COPYING.txt
-	cp $(ORIGDIR)/sdcc/sdas/COPYING3 $(BUILDDIR)$(PREFIX)/COPYING3.txt; unix2dos $(BUILDDIR)$(PREFIX)/COPYING3.txt
+	cp $(ORIGDIR)/sdcc/COPYING $(BUILDDIR)$(PREFIX)/COPYING.txt; $(UNIX2DOS) $(BUILDDIR)$(PREFIX)/COPYING.txt
+	cp $(ORIGDIR)/sdcc/sdas/COPYING3 $(BUILDDIR)$(PREFIX)/COPYING3.txt; $(UNIX2DOS) $(BUILDDIR)$(PREFIX)/COPYING3.txt
 	cp $(ORIGDIR)/sdcc/support/scripts/sdcc.nsi $(BUILDDIR)$(PREFIX)
 	cp $(ORIGDIR)/sdcc/support/scripts/sdcc.ico $(BUILDDIR)$(PREFIX)
 	-cd $(BUILDDIR)$(PREFIX); \
