@@ -88,6 +88,9 @@ TARBALLBASE = snapshots
 TARBALLDIR = $(SNAPSHOTDIR)/$(TARGET_PLATFORM)
 endif
 
+# dos utils
+UNIX2DOS := $(shell if unix2dos -h > /dev/null 2>&1; then echo unix2dos; else echo todos; fi)
+
 $(STAMPDIR):
 	mkdir -p $(STAMPDIR)
 
