@@ -1,3 +1,8 @@
+2010-07-03 Borut Razem <borut.razem AT siol.net>
+
+        * lib/bootstrap.mk, lib/doc-archive.mk, lib/variables.mk:
+	  added UNIX2DOS dos utils alias, ndeeded on Ubuntu
+
 2010-06-27 Borut Razem <borut.razem AT siol.net>
 
 	* components/sdcc.mk:
